fix bug, complete the project

--- a/Bilinguals/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Bilinguals/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -27,7 +27,7 @@
                 color: white;
             }
         </style>
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+        <a href="~/admin/dashboard" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
             <img width="30" class="me-2" src="~/favicon.ico" />
             <span class="fs-4">Administrator</span>
         </a>
