--- a/Bilinguals/Views/Dialogs/MyDialog.cshtml
+++ b/Bilinguals/Views/Dialogs/MyDialog.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc;
 
 @{
-    ViewBag.Title = "MyDialog";
+    ViewBag.Title = "Saved Dialogs";
 }
 
 <h2 class="text-center rounded-pill2 text-white shadow-sm py-2 mb-3" style="background-color: #42586f;">My Dialogs</h2>
