--- a/Bilinguals/Views/Groups/MySentence.cshtml
+++ b/Bilinguals/Views/Groups/MySentence.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Bilinguals.Domain.Models.Group>
 
 @{
-    ViewBag.Title = "My Sentence";
+    ViewBag.Title = "Saved Sentences";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <link href="~/Content/css/my-sentence.css" rel="stylesheet" />
