--- a/Bilinguals/Views/Manage/Index.cshtml
+++ b/Bilinguals/Views/Manage/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Bilinguals.Models.IndexViewModel
 @using Microsoft.AspNet.Identity
 @{
-    ViewBag.Title = "Manage";
+    ViewBag.Title = "Profile";
 }
-
+<link href="~/Content/css/alert1.css" rel="stylesheet" />
 <div class="row gx-5">
     <p class="text-success">@ViewBag.StatusMessage</p>
 
@@ -14,7 +14,7 @@
                     <div class="card mb-4 rounded-pill">
                         <div class="card-body text-center">
                             <div>
-                                <img src=" ~/Avatars/@(!Model.ImageId.HasValue ? "defaultAvatar.jpg" : Model.image.ImagePath )" alt="avatar" class="rounded-circle img-fluid avatar" style="width: 150px;height: 150px;">
+                                <img src=" ~/Avatars/@(!Model.ImageId.HasValue ? "defaultAvatar.jpg" : Model.image.ImagePath )" alt="avatar" class="rounded-circle img-fluid avatar" style="max-width: 150px;max-height: 150px;">
                                 <a data-imageid="@Model.ImageId" class="btn position-absolute avatarbtn" data-bs-toggle="modal" data-bs-target="#bsModal"><i class="bi bi-person-bounding-box"></i></a>
                                 <a @(!Model.ImageId.HasValue ? "hidden" : "") data-imageid="@Model.ImageId" class="btn position-absolute avatarremove mt-5" data-bs-toggle="modal" data-bs-target="#bsModalRemove"><i class="bi bi-trash-fill"></i></a>
                             </div>
@@ -112,6 +112,9 @@
     </div>
 </div>
 
+<div id="pageMessages">
+
+</div>
 
 
 <!--<div>
@@ -123,66 +126,67 @@
             @Model.Logins.Count [
             @Html.ActionLink("Manage", "ManageLogins") ]
         </dd>-->
-        @*
-            Phone Numbers can used as a second factor of verification in a two-factor authentication system.
+@*
+    Phone Numbers can used as a second factor of verification in a two-factor authentication system.
 
-             See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
+     See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+        for details on setting up this ASP.NET application to support two-factor authentication using SMS.
 
-             Uncomment the following block after you have set up two-factor authentication
-        *@
-        @*
-            <dt>Phone Number:</dt>
-            <dd>
-                @(Model.PhoneNumber ?? "None")
-                @if (Model.PhoneNumber != null)
-                {
-                    <br />
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
-                    using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>[<input type="submit" value="Remove" class="btn-link" />]</text>
-                    }
-                }
-                else
-                {
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
-                }
-            </dd>
-        *@
-        <!--<dt>Two-Factor Authentication:</dt>
-        <dd>
-            <p>
-                There are no two-factor authentication providers configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication.
-            </p>-->
-            @*@if (Model.TwoFactor)
-                {
-                    using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Enabled
-                        <input type="submit" value="Disable" class="btn btn-link" />
-                        </text>
-                    }
-                }
-                else
-                {
-                    using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Disabled
-                        <input type="submit" value="Enable" class="btn btn-link" />
-                        </text>
-                    }
-                }*@
-        <!--</dd>
+     Uncomment the following block after you have set up two-factor authentication
+*@
+@*
+    <dt>Phone Number:</dt>
+    <dd>
+        @(Model.PhoneNumber ?? "None")
+        @if (Model.PhoneNumber != null)
+        {
+            <br />
+            <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
+            using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                <text>[<input type="submit" value="Remove" class="btn-link" />]</text>
+            }
+        }
+        else
+        {
+            <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
+        }
+    </dd>
+*@
+<!--<dt>Two-Factor Authentication:</dt>
+<dd>
+    <p>
+        There are no two-factor authentication providers configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+        for details on setting up this ASP.NET application to support two-factor authentication.
+    </p>-->
+@*@if (Model.TwoFactor)
+    {
+        using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <text>Enabled
+            <input type="submit" value="Disable" class="btn btn-link" />
+            </text>
+        }
+    }
+    else
+    {
+        using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <text>Disabled
+            <input type="submit" value="Enable" class="btn btn-link" />
+            </text>
+        }
+    }*@
+<!--</dd>
     </dl>
 </div>-->
 
 @section scripts{
     <script src="~/Scripts/jquery.form.js"></script>
+    <script src="~/Scripts/Components/alert1.js"></script>
     <script src="~/Scripts/Components/update-image.js"></script>
     <script type="text/javascript">
         var Main = (function () {
@@ -197,6 +201,7 @@
                         $('#avatarmini').remove();
                         $('#avatardefault').remove();
                         $('#avatarnavbar').append(`<span id="avatarmini"><img src="\/Avatars/${newImage.path}" alt="" width="32" height="32" class="rounded-circle me-2 border border-2"></span>`);
+                        createAlert('', '', 'Update Successfully!', 'success', false, true, 'pageMessages');
                     });
                     bsModalRemove.init(() => { bsModalRemove.setState() }, (data) => {
                         //update ui image
@@ -205,6 +210,7 @@
                         $('.avatarremove').attr('hidden', '');
                         $('#avatarmini').remove();
                         $('#avatarnavbar').append(`<span id="avatardefault"><i style=" font-size: 18px;" class="bi bi-person-fill mx-1"></i></span>`);
+                        createAlert('', '', 'Remove Successfully!', 'warning', false, true, 'pageMessages');
                     });
                 },
             }
