--- a/Bilinguals/Views/Dialogs/Edit.cshtml
+++ b/Bilinguals/Views/Dialogs/Edit.cshtml
@@ -18,13 +18,16 @@
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.DateCreated)
 
-        
-            <div class="d-flex justify-content-center">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control rounded-pill1", style = "max-width: 700px !important;" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        
+        <div class="d-flex justify-content-center">
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control rounded-pill1 mb-3", style = "max-width: 700px !important;" } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+        </div>
 
+        <div class="d-flex justify-content-center">
+            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control rounded-pill1", style = "max-width: 700px !important;" } })
+            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+        </div>
+        
     </div>
     <div class="form-actions no-color text-center mt-4">
         <input type="submit" value="Save" class="btn btn-custom1 rounded-pill2 me-2" />
